Fixed andy thing

--- a/stuff/andy/views/index.html
+++ b/stuff/andy/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html>
 <head> 
     <title>Coder</title>
@@ -19,7 +19,7 @@
     <!-- End Coder Includes -->
 
     <!-- This app's includes -->
-    <script src="/static/apps/lsd/media/phaser.min.js"></script>
+    <script src="http://holton.io/stuff/andy/static/media/phaser.min.js"></script>
     <link href="{{&static_url}}/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="{{&static_url}}/js/index.js"></script>
     <!-- End apps includes -->
