--- a/stuff/andy/views/index.html
+++ b/stuff/andy/views/index.html
@@ -3,25 +3,11 @@ i<!DOCTYPE html>
 <head> 
     <title>Coder</title>
     <meta charset="utf-8">
-    <!-- Standard Coder Includes -->
-    <script>
-        var appname = "{{app_name}}"; //app name (id) of this app
-        var appurl = "{{&app_url}}";
-        var staticurl = "{{&static_url}}"; //base path to your static files /static/apps/yourapp
-    </script>
-    <link href="/static/apps/coderlib/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="/static/common/js/jquery.min.js"></script>
-    <script src="/static/common/ace-min/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/apps/coderlib/js/index.js"></script>
-    <script>
-        Coder.addBasicNav();
-    </script>
-    <!-- End Coder Includes -->
 
     <!-- This app's includes -->
     <script src="http://holton.io/stuff/andy/static/media/phaser.min.js"></script>
-    <link href="{{&static_url}}/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="{{&static_url}}/js/index.js"></script>
+    <link href="http://holton.io/stuff/andy/static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="http://.io/stuff/andy/static/js/index.js"></script>
     <!-- End apps includes -->
 </head>
 <body class="">
