--- a/stuff/andy/views/index.html
+++ b/stuff/andy/views/index.html
@@ -7,7 +7,7 @@ i<!DOCTYPE html>
     <!-- This app's includes -->
     <script src="http://holton.io/stuff/andy/static/media/phaser.min.js"></script>
     <link href="http://holton.io/stuff/andy/static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
-    <script src="http://.io/stuff/andy/static/js/index.js"></script>
+    <script src="http://holton.io/stuff/andy/static/js/index.js"></script>
     <!-- End apps includes -->
 </head>
 <body class="">
