--- a/stuff/andy/views/index.html
+++ b/stuff/andy/views/index.html
@@ -1,7 +1,7 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head> 
-    <title>Coder</title>
+    <title>LSD</title>
     <meta charset="utf-8">
 
     <!-- This app's includes -->
